testsuite/tests/checks/too_many_primitives/test.out
foo.ads:2:9: error: tagged type has too many primitives
2 |    type T is tagged null record;
  |         ^ 

